# a-share-trading-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AGENT_ARCHITECTURE.md  README.md  docker-compose.yml  env_versions.txt  main.ipynb  pytest.ini  requirements.txt  run_agent.py  todo.md  train_lstm_model.py  train_stock_model.py
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: README.md  env.py
backend/alembic/versions/: 20260715_0001_initial_schema.py  20260715_0002_timestamp_defaults.py  20260716_0003_memory_knowledge.py  20260717_0004_agent_actions_outbox.py  20260722_0005_knowledge_source_type.py  20260722_0006_repair_tool_action_source.py  README.md
backend/app/: README.md  __init__.py  main.py
backend/app/agent_runtime/: README.md  __init__.py  specs.py  tools.py
backend/app/api/: README.md  dependencies.py
backend/app/core/: README.md  __init__.py  config.py  database.py  security.py
backend/app/models/: README.md  __init__.py  domain.py
backend/app/repositories/: README.md  chat_repository.py  knowledge_repository.py  memory_repository.py  outbox_repository.py  portfolio_repository.py  research_repository.py  tool_action_repository.py  user_repository.py
backend/app/schemas/: README.md  auth.py  chat.py  knowledge.py  memory.py  portfolio.py  research.py
backend/app/services/: README.md  (+9 more)
backend/tests/: README.md  conftest.py  test_api_auth_and_isolation.py  test_chat_confirmation.py  test_langgraph_runtime.py  test_migrations.py  test_outbox_and_worker.py
(+175 files in other folders)
