[project]
name = "ashare-research-backend"
version = "0.1.0"
description = "A-share AI research platform backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "aiosqlite>=0.20,<1.0",
  "alembic>=1.13,<2.0",
  "pydantic-settings>=2.5,<3.0",
  "pyjwt>=2.9,<3.0",
  "pwdlib[argon2]>=0.2,<1.0",
  "celery[redis]>=5.4,<6.0",
  "redis>=5.0,<6.0",
  "email-validator>=2.2,<3.0",
  "python-multipart>=0.0.12,<1.0",
  "pypdf>=5.0,<7.0",
  "langchain-text-splitters>=0.3,<1.0",
  "qdrant-client[fastembed]>=1.12,<2.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.24,<1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
